# synax

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: documentation.yml  tests.yml
_sources/: contributing.md.txt  index.rst.txt  installation.md.txt  usage.md.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/synax/: AlexNet.html  AntiSymmetricMatrix.html  AntiSymmetricMatrix.init_params.html  AntiSymmetricMatrix.param_loss.html  Attention.apply.html  Attention.html  Attention.init.html  Attention.init_params.html  Attention.param_loss.html  Attention.parameter_loss.html  AutoEncoder.html  AutoEncoder.init.html  AutoEncoder.init_params.html  AutoEncoder.param_loss.html  AutoEncoder.parameter_loss.html  Bias.apply.html  Bias.html  Bias.init.html  (+96 more)
docs/: building.md  conf.py  contributing.md  development.md  gettingstarted.md  index.rst  installation.md  usage.md
examples/: basic.py  mnist.py  module.py
jax_modules/: __init__.py  _attention.py  _basic.py  _compound.py  _misc.py  _module.py  _parameterizations.py  _recurrent.py  _regularizers.py  _utils.py  attention.py  basic.py  compound.py  misc.py  module.py  parameterizations.py  recurrent.py  regularizers.py  utils.py
tests/: test_modules.py
(+239 files in other folders)
