[project]
name = "jax_modules"
dynamic = ["version"]
dependencies = [
    "jax",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "furo",
]

[tool.pyright]
useLibraryCodeForTypes = false
reportPrivateImportUsage = false
reportIncompatibleMethodOverride = false

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
    "E741",
]
extend-select = [
    "I",
]
