[project]
name = "synax"
dynamic = ["version"]
dependencies = [
    "jax",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "furo",
    "sphinx-autoapi",
]

[tool.pyright]
useLibraryCodeForTypes = false
reportPrivateImportUsage = false
reportIncompatibleMethodOverride = false

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
    "E741",
]
extend-select = [
    "I",
]
