[project]
name = "synax"
authors = [
    { name="Carlos Martin", email="cgmartin@cs.cmu.edu" },
]
description = "A neural network library for JAX"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "jax",
]

[project.urls]
Homepage = "https://github.com/carlosgmartin/synax"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "myst-parser",
]

[tool.pyright]

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
    "E741",
]
extend-select = [
    "I",
]
